Squashed commits from first shot on bug fixes, code cleanups, minor additions.
Added helper methods to set, release and check user_id in zmq_target.

Fixed typo in calling _prepare_u1db_action.

Removed local U1DB trunk files. Now installed as a dependency.

Fixed database opening issues. Now, u1db can open a database based off a user_id, provided that database is already present.

Updated requirements.txt

Fixed data being packed into message structures.

Changed type of doc_rev to string. Modified tests accordingly.

Added workaround to find out last_known generation and trans_id before validating them in prepare_for_sync_exchange.

Fixed bugs in sync. Current BUG is that target returns the doc just received from source.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+Paste>=1.7.5.1
+Routes>=2.0
 argparse>=1.2.1
 backports.ssl-match-hostname>=3.4.0.2
+dirspec>=13.10
 distribute>=0.6.24
+leap.soledad.common>=0.5.2-22-g4519775
+mock>=1.0.1
+oauth>=1.0.1
 protobuf>=2.5.0
-pyzmq>=14.1.1
+py>=1.4.20
+pyzmq>=14.3.1
+repoze.lru>=0.6
+simplejson>=3.5.3
+u1db>=13.09
 wsgiref>=0.1.2
