--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,12 @@
-BeautifulSoup>=3.2.0
-Brlapi>=0.5.6
-CouchDB>=0.9
-GnuPGInterface>=0.3.2
-Jinja2>=2.7.1
-Mako>=0.5.0
-Markdown>=2.3.1
-MarkupSafe>=0.15
-PAM>=0.4.2
-PIL>=1.1.7
-Paste>=1.7.5.1
-Pivy>=0.5.0
-PyAMF>=0.6.1
-PyOpenGL>=3.0.1b2
-Pygments>=1.6
-RTMPy>=0.1.1
-Routes>=2.0
-Shapely>=1.2.14
-Twisted>=13.2.0
-Twisted-Conch>=11.1.0
-Twisted-Core>=11.1.0
-Twisted-Lore>=11.1.0
-Twisted-Mail>=11.1.0
-Twisted-Names>=11.1.0
-Twisted-News>=11.1.0
-Twisted-Runner>=11.1.0
-Twisted-Web>=11.1.0
-Twisted-Web2>=8.1.0
-Twisted-Words>=11.1.0
-apt-xapian-index>=0.44
-aptoncd>=0.1.98-bzr117-1.2
-apturl>=0.4.1ubuntu4
 argparse>=1.2.1
-bzr>=2.5.1
-cchardet>=0.3.5
-chardet>=2.0.1
-command-not-found>=0.2.44
-configglue>=1.0
-configobj>=4.7.2
-configparser>=3.3.0r2
-coverage>=3.4
-debtagshw>=0.1
-decorator>=3.3.2
-defer>=1.0.2
-deluge>=1.3.5
-dirspec>=13.10
-## FIXME: could not find svn URL in dependency_links for this package:
-distribute>=0.6.24dev-r0
-docutils>=0.11
-duplicity>=0.6.18
-feedparser>=5.1
-flvlib>=0.1.13
-gufw>=12.04.1
-html5lib>=0.90
-httplib2>=0.7.2
-icalendar>=3.6.1
-ipython>=0.12.1
-irclog2html>=2.13.1
-jockey>=0.9.7
-keyring>=0.7.1
-kiwi>=1.9.22
-landslide>=1.1.1
-language-selector>=0.1
-launchpadlib>=1.9.12
-lazr.restfulclient>=0.12.0
-lazr.uri>=1.0.3
+coverage>=3.7.1
+distribute>=0.6.24
+leap.common>=0.3.8
 leap.soledad.client>=0.5.2-22-g4519775
 leap.soledad.common>=0.5.2-22-g4519775
-leap.soledad.server>=0.5.2-22-g4519775
-louis>=2.3.0
-lxml>=2.3.2
-mercurial>=2.0.2
-nose>=1.1.2
-nosexcover>=1.0.7
-numpy>=1.6.1
-nvidia-common>=0.0.0
-oauth>=1.0.1
-paramiko>=1.7.7.1
-pep8>=1.5.7
-pexpect>=2.3
-pika>=0.9.5
-pisa>=3.0.32
-piston-mini-client>=0.7.2
-protobuf>=2.4.1
-psycopg2>=2.4.5
-pyLibravatar>=1.5
-pyOpenSSL>=0.12
-pyPdf>=1.13
-pyasn1>=0.0.11a
-pychess>=0.10.1beta1
-pycrypto>=2.4.1
-pycryptopp>=0.6.0.1206569328141510525648634803928199668821045408958
-pycups>=1.9.61
-pycurl>=7.19.0
-pydns>=2.3.6
-pyflakes>=0.5.0
-pygame>=1.9.1release
-pygpgme>=0.2
-pyinotify>=0.9.2
-pyparsing>=2.0.1
-pyserial>=2.5
-pysmbc>=1.0.13
-pysqlcipher>=2.6.3
-pysqlite>=1.0.1
-python-apt>=0.8.3ubuntu7
-python-dateutil>=1.5
-python-debian>=0.1.21ubuntu1
-python-launchpadlib-toolkit>=1.0
-python-libpisock>=0.12.5
-python-libtorrent>=0.15.10
-python-pipeline>=0.1.3
-python-virtkey>=0.60.0
-pytz>=2013.9
-pyxdg>=0.19
-reportlab>=2.5
-repoze.lru>=0.6
-requests>=2.0.1
-rope>=0.9.2
-scrypt>=0.6.1
-sessioninstaller>=0.0.0
-simplegeneric>=0.7
-simplejson>=3.3.3
-software-center-aptd-plugins>=0.0.0
-speedtest-cli>=0.2.7
-system-service>=0.1.6
-taskthread>=1.4
-txLibravatar>=1.1
+mock>=1.0.1
+protobuf>=2.5.0
+pyzmq>=14.3.1
+simplejson>=3.5.3
 u1db>=13.09
-ufw>=0.31.1-1
-unattended-upgrades>=0.1
-usb-creator>=0.2.23
-vboxapi>=1.0
-virtualenv>=1.7.1.2
-wadllib>=1.3.0
 wsgiref>=0.1.2
-xkit>=0.0.0
-zope.interface>=3.6.1
-zope.proxy>=4.1.4
